--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 18 * * *" # 매일 새벽 자동 갱신
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
